--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Dicee</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css?family=Indie+Flower|Lobster" rel="stylesheet">
-
+    <script src="index.js" type="text/javascript"></script>
   </head>
   <body>
 
@@ -31,5 +31,4 @@
   <footer>
     www 🎲 App Brewery 🎲 com
   </footer>
-  <script src="index.js"></script>
 </html>
